src/containers/detail.scss
@import "../scss/utils";

.detail {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;
  background: rgba(0, 0, 0, 0.8);
  display: flex;
  align-items: center;
}

.closeBtn {
  color: dimgrey;
  position: absolute;
  right: 80px;
  top: 40px;
  width: 48px;
  height: 48px;
  border: 5px solid dimgrey;
  border-radius: 100%;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;

  &:hover {
    color: white;
    border-color: white;
  }
}

.heading {
  color: yellow;
  text-align: center;
}

.popup {
  background: rgba(0, 0, 0, 0.9);
  border: 1px solid yellow;
  border-radius: 5px;
  color: $dodger-blue;
  padding: 20px 40px;
  width: 60%;
  height: 600px;
  overflow-y: scroll;
  margin: 0 auto;

  :global(.carousel-inner) {
    height: 500px;
  }

  :global(.carousel-control-prev),
  :global(.carousel-control-next) {
    cursor: pointer;
    width: max-content;
  }

  &::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }

  &::-webkit-scrollbar-track {
    background-color: black;
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: yellow;
    border-radius: 10px;
  }
}

